# agentic_devops_assistant_project

./: .env-dev  .gitignore  PROPOSAL.md  README.md  pyproject.toml  requirements.txt  setup.py
agentic_devops/: __init__.py  cli.py
agentic_devops/generator/: cdk_generator.py  github_client.py
agentic_devops/tests/: test_cdk_generator.py  test_cdk_generator_edge_cases.py
agentic_devops/utils/: exceptions.py  logger.py
cdk_templates/api_rest_python/: README.md  requirements.txt
cdk_templates/api_rest_python/lib/: api_rest_stack.py
cdk_templates/api_rest_python/tests/: test_api_rest_stack.py
cdk_templates/static_web_app/: README.md
cdk_templates/static_web_app/lib/: static_web_stack.py
cdk_templates/static_web_app/tests/: test_static_web_stack.py
cdk_templates/static_web_app/website/: index.html
scripts/: activate_venv.sh  setup_dev.sh
